fixed margins and added overflow

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body,
   margin: 0;
   width: 100%;
   display: flex;
-  min-height: 100%;
+  height: 100%;
   align-items: stretch;
 }
 
